--- a/docs/user_guide/using-the-visualizer.ipynb
+++ b/docs/user_guide/using-the-visualizer.ipynb
@@ -77,7 +77,8 @@
       "Setting up the liquid handler.\n",
       "Resource deck was assigned to the liquid handler.\n",
       "Resource trash was assigned to the liquid handler.\n",
-      "Resource trash_core96 was assigned to the liquid handler.\n"
+      "Resource trash_core96 was assigned to the liquid handler.\n",
+      "Resource teaching_carrier was assigned to the liquid handler.\n"
      ]
     }
    ],
@@ -103,8 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Websocket server started at http://127.0.0.1:2121\n",
-      "File server started at http://127.0.0.1:1337 . Open this URL in your browser.\n"
+      "Websocket server started at http://127.0.0.1:2122\n",
+      "File server started at http://127.0.0.1:1338 . Open this URL in your browser.\n"
      ]
     }
    ],
@@ -641,7 +642,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -698,11 +699,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "bf274dfc1b974177267b6b8fba8543eeb0bb4c5d64c637dde420829b05625268"
-   }
   }
  },
  "nbformat": 4,
